<?xml version="1.0" encoding="UTF-8"?>
<!--

   Copyright (c) 2025 Guillaume Nodet

   This program and the accompanying materials are made
   available under the terms of the Eclipse Public License 2.0
   which is available at https://www.eclipse.org/legal/epl-2.0/

   SPDX-License-Identifier: EPL-2.0

  -->
<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" root="true" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>55</version>
  </parent>
  <groupId>eu.maveniverse.maven.mason</groupId>
  <artifactId>mason-parent</artifactId>
  <version>0.3.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>
  <description>Mason Parent.</description>

  <scm>
    <connection>scm:git:git@github.com:maveniverse/mason.git</connection>
    <developerConnection>scm:git:git@github.com:maveniverse/mason.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/maveniverse/mason</url>
  </scm>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/mason/issues</url>
  </issueManagement>

  <ciManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/mason/actions</url>
  </ciManagement>

  <properties>
    <version.maven>4.0.0-rc-5</version.maven>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

</project>
